--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "45718079",
    "metadata": {},
    "outputs": [],
@@ -29,9 +29,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b1617016e2ba36450c33f06d6953ab0722e73c1e86ea6f1e76d315ff18cceeb5"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.6 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -44,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
