--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -33,7 +33,8 @@
    "hash": "b1617016e2ba36450c33f06d6953ab0722e73c1e86ea6f1e76d315ff18cceeb5"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -46,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
